ALFREDAPI-548-split [Update]   * Only supports Alfresco V23.1.0 && V23.2.1   * Javax => Jakarta Library   * JDK 11 => JDK 17   * Dynamic-Extensions (DE) support dropped. Removed any plugin with DE for Alfresco 23.1 23.2 support   * Changed the 'eu.xenit.alfresco-remote-testrunner' to JUnit-remote testrunner using nano-http technology.      * Added JUnit-server subproject that sets up the server + makes the application context statically available      * Read-in the static application-context to have all Alfresco/Apix beans available for the integration-tests.      * Set Integration-tests Helper classes into the server subproject to make them available on the runtime-classpath for integration-tests          * Used to be done via DE-OSGI-bundle magic (Swapping application-context during runtime).
  Current situation all integration-tests should be fixed besides 7 failing tests.
  All failing due to Postmapping not working correctly. "File not received" (Tests fail in Postman aswell).
